[gd_scene load_steps=4 format=2]

[ext_resource path="res://Styles/TextButtonTheme.tres" type="Theme" id=1]
[ext_resource path="res://Title/Main.gd" type="Script" id=2]
[ext_resource path="res://Title/Title.gd" type="Script" id=3]

[node name="Title" type="Node2D"]
script = ExtResource( 3 )

[node name="Main" type="Control" parent="."]
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="Main"]
margin_left = 137.0
margin_top = 74.0
margin_right = 183.0
margin_bottom = 88.0
focus_mode = 0
theme = ExtResource( 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="Main"]
margin_left = 134.0
margin_top = 101.0
margin_right = 187.0
margin_bottom = 115.0
focus_mode = 0
theme = ExtResource( 1 )
text = "New Game"

[node name="OptionsButton" type="Button" parent="Main"]
margin_left = 140.0
margin_top = 128.0
margin_right = 180.0
margin_bottom = 142.0
focus_mode = 0
theme = ExtResource( 1 )
text = "Options"

[node name="QuitButton" type="Button" parent="Main"]
margin_left = 149.0
margin_top = 155.0
margin_right = 171.0
margin_bottom = 169.0
focus_mode = 0
theme = ExtResource( 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Main/ContinueButton" to="Main" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Main/NewGameButton" to="Main" method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Main/OptionsButton" to="Main" method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Main/QuitButton" to="Main" method="_on_QuitButton_pressed"]
